--- a/plugins/CommandPanels/panels/parkour_menu.yml
+++ b/plugins/CommandPanels/panels/parkour_menu.yml
@@ -33,7 +33,7 @@ panels:
         - '&eBest time: &f%parkour_course_record_parkourtutorial_player%&8: &b%parkour_course_record_parkourtutorial_time%'
         - '&eViews: &b%parkour_course_views_parkourtutorial%&f | &eCompletions: &b%parkour_course_completions_parkourtutorial% &f(&b%math_0:1_100/{parkour_course_views_parkourtutorial}*{parkour_course_completions_parkourtutorial}%%&f)'
         - ''
-        - '&eReward: &b$%parkour_course_ecoreward_parkourtutorial%&f + &elvl up: &b%parkour_course_rewardparkourleveladd_parkourtutorial%'
+        - '&eReward: &b$%parkour_course_ecoreward_parkourtutorial%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_parkourtutorial%'
         - ''
         - '&eCreated by: &f%parkour_course_creator_parkourtutorial%'
         commands:
