--- a/plugins/CommandPanels/panels/parkour_playercourses.yml
+++ b/plugins/CommandPanels/panels/parkour_playercourses.yml
@@ -29,7 +29,7 @@ panels:
           - '&eBest time: &f%parkour_course_record_netherdream_player%&8: &b%parkour_course_record_netherdream_time%'
           - '&eViews: &b%parkour_course_views_netherdream%&f | &eCompletions: &b%parkour_course_completions_netherdream% &f(&b%math_0:1_100/{parkour_course_views_netherdream}*{parkour_course_completions_netherdream}%%&f)'
           - ''
-          - '&eReward: &b$%parkour_course_ecoreward_netherdream%&f + &elvl up: &b%parkour_course_rewardparkourleveladd_netherdream%'
+          - '&eReward: &b$%parkour_course_ecoreward_netherdream%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_netherdream%'
           - ''
           - '&eCreated by: &f%parkour_course_creator_netherdream%'
           commands:
@@ -44,7 +44,7 @@ panels:
           - '&eBest time: &f%parkour_course_record_shipwool_player%&8: &b%parkour_course_record_shipwool_time%'
           - '&eViews: &b%parkour_course_views_shipwool%&f | &eCompletions: &b%parkour_course_completions_shipwool% &f(&b%math_0:1_100/{parkour_course_views_shipwool}*{parkour_course_completions_shipwool}%%&f)'
           - ''
-          - '&eReward: &b$%parkour_course_ecoreward_shipwool%&f + &elvl up: &b%parkour_course_rewardparkourleveladd_shipwool%'
+          - '&eReward: &b$%parkour_course_ecoreward_shipwool%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_shipwool%'
           - ''
           - '&eCreated by: &f%parkour_course_creator_shipwool%'
           commands:
