--- a/.github/workflows/tfb.yml
+++ b/.github/workflows/tfb.yml
@@ -8,3 +8,11 @@ on:
 jobs:
   call-workflow:
     uses: theflyingbirdsmc/TFB-Network/.github/workflows/tfb.yml@main
+    secrets:
+          MAVEN_URL: ${{ secrets.MAVEN_URL }}
+          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+          DOCKER_REPO: ${{ secrets.DOCKER_REPO }} # change this to your Nexus Registry URL
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_URL: ${{ secrets.DOCKER_URL }}
