--- a/.github/workflows/tfb.yml
+++ b/.github/workflows/tfb.yml
@@ -15,4 +15,4 @@ jobs:
           DOCKER_REPO: ${{ secrets.DOCKER_REPO }} # change this to your Nexus Registry URL
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          DOCKER_URL: ${{ secrets.DOCKER_URL }}
+          DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
