--- a/.github/workflows/tfb.yml
+++ b/.github/workflows/tfb.yml
@@ -12,7 +12,7 @@ jobs:
           MAVEN_URL: ${{ secrets.MAVEN_URL }}
           MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
-          DOCKER_REPO: ${{ secrets.DOCKER_REPO }} # change this to your Nexus Registry URL
+          DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
