--- a/plugins/PlaceholderAPI/javascript_placeholders.yml
+++ b/plugins/PlaceholderAPI/javascript_placeholders.yml
@@ -64,6 +64,10 @@ tfb_cosmetics:
 
 tfb_vanilladk:
   file: tfb_vanilladk.js
+tfb_danish-survival:
+  file: tfb_danish-survival.js
+tfb_cs-tmm:
+  file: tfb_cs-tmm.js
 tfb_parkoureu:
   file: tfb_parkoureu.js
 tfb_lobby:
@@ -82,5 +86,11 @@ tfb_chat_help:
   file: tfb_chat_help.js
 tfb_chat_staff:
   file: tfb_chat_staff.js
+motd:
+  file: motd.js
+motdWB:
+  file: motdWB.js
+lobby_hologram:
+  file: lobby_hologram.js
 example:
   file: example.js
