--- a/plugins/PlaceholderAPI/config.yml
+++ b/plugins/PlaceholderAPI/config.yml
@@ -1,28 +1,24 @@
 # PlaceholderAPI
-# Version: 2.10.10
+# Version: 2.11.6
 # Created by: extended_clip
 # Contributors: https://github.com/PlaceholderAPI/PlaceholderAPI/graphs/contributors
 # Issues: https://github.com/PlaceholderAPI/PlaceholderAPI/issues
-# Expansions: https://api.extendedclip.com/all/
-# Wiki: https://github.com/PlaceholderAPI/PlaceholderAPI/wiki
+# Expansions: https://placeholderapi.com/ecloud
+# Wiki: https://wiki.placeholderapi.com/
 # Discord: https://helpch.at/discord
 # No placeholders are provided with this plugin by default.
 # Download placeholders: /papi ecloud
 check_updates: true
 cloud_enabled: true
 cloud_sorting: name
-cloud_allow_unverified_expansions: false
 boolean:
   'true': 'yes'
   'false': 'no'
 date_format: MM/dd/yy HH:mm:ss
 debug: false
+cloud_allow_unverified_expansions: true
 expansions:
   player:
-    ping_color:
-      medium: '&e'
-      high: '&c'
-      low: '&a'
     ping_value:
       high: 100
       medium: 50
@@ -35,6 +31,14 @@ expansions:
       south_east: SE
       west: W
       south_west: SW
+    ping_color:
+      medium: '&e'
+      high: '&c'
+      low: '&a'
+  pinger:
+    offline: '&cOffline'
+    check_interval: 30
+    online: '&aOnline'
   bungee:
     check_interval: 30
   server:
@@ -43,13 +47,16 @@ expansions:
       low: '&c'
       medium: '&e'
     server_name: A Minecraft Server
-  pinger:
-    offline: '&cOffline'
-    check_interval: 5
-    online: '&aOnline'
   javascript:
+    enable_parse_command: false
     debug: false
     github_script_downloads: false
     argument_split: ','
     use_quick_js: false
-    enable_parse_command: false
+  vault:
+    formatting:
+      thousands: k
+      millions: M
+      billions: B
+      trillions: T
+      quadrillions: Q
