--- a/paper.yml
+++ b/paper.yml
@@ -19,7 +19,7 @@ settings:
   use-display-name-in-quit-message: false
   load-permissions-yml-before-plugins: true
   region-file-cache-size: 256
-  enable-player-collisions: true
+  enable-player-collisions: false
   save-empty-scoreboard-teams: false
   bungee-online-mode: true
   incoming-packet-spam-threshold: 300
