--- a/plugins/ChatControlRed/mysql.yml
+++ b/plugins/ChatControlRed/mysql.yml
@@ -23,7 +23,7 @@ Hikari: true
 Host: tfb-network-db:3306
 
 # The database name
-Database: tfb_network_chatcontrolred
+Database: tfb_network_chatcontrol
 
 # The username
 User: tfb_network
