--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,46 +1,45 @@
 dependencies {
     // Network plugins
-    implementation 'Server:Paper:1.21.1-122'
-    implementation 'Plugin:Tebex:2.0.+'
-    implementation 'Plugin:ChatControlRed:10.28.0'
-    implementation 'Plugin:CommandPanels:3.21.4.2'
-    implementation 'Plugin:DecentHolograms:2.8.11'
-    implementation 'Plugin:Essentials:2.21.0-dev+115-6157668'
-    implementation 'Plugin:EssentialsSpawn:2.21.0-dev+115-6157668'
-    implementation 'Plugin:FastAsyncWorldEdit:2.11.3-SNAPSHOT-908-c249654'
-    implementation 'Plugin:GadgetsMenu:5.18.9'
-    implementation 'Plugin:HexNicks:3.1.1'
-    implementation 'Plugin:GSit:1.10.0'
-    implementation 'Plugin:LibsDisguises:10.0.44'
-    implementation 'Plugin:LuckPerms:5.4.141'
-    implementation 'Plugin:Multiverse-Core:4.+'
+    implementation 'Server:Paper:1.21.1-133'
+    implementation 'Plugin:Tebex:2.2.1'
+    implementation 'Plugin:ChatControl:11.3.1'
+    implementation 'Plugin:CommandPanels:3.22.1'
+    implementation 'Plugin:DecentHolograms:2.8.16'
+    implementation 'Plugin:Essentials:2.21.0'
+    implementation 'Plugin:EssentialsSpawn:2.21.0'
+    implementation 'Plugin:FastAsyncWorldEdit:2.13.1-SNAPSHOT-1089-d1865b6'
+    implementation 'Plugin:GadgetsMenu:5.21.0'
+    implementation 'Plugin:HexNicks:3.1.2'
+    implementation 'Plugin:GSit:2.3.1'
+    implementation 'Plugin:LibsDisguises:11.0.5'
+    implementation 'Plugin:LuckPerms:5.4.158'
+    implementation 'Plugin:Multiverse-Core:4.3.16'
     implementation 'Plugin:PlaceholderAPI:2.11.6'
-    implementation 'Plugin:ProtocolLib:5.2.+'
-    implementation 'Plugin:Plan:5.6-build-2883'
-    implementation 'Plugin:TAB:5.0.1'
-    implementation 'Plugin:Vault:1.7.+'
+    implementation 'Plugin:ProtocolLib:5.3.0'
+    implementation 'Plugin:Plan:5.6-build-2965'
+    implementation 'Plugin:TAB:5.2.0'
+    implementation 'Plugin:Vault:1.7.3-b131'
     // implementation 'Plugin:ViaVersion:5.1.1'
-    implementation 'Plugin:VotingPlugin-Bungee:6.16.+'
-    implementation 'Plugin:WorldGuard:7.0.+'
+    implementation 'Plugin:VotingPlugin:6.18.4'
+    implementation 'Plugin:WorldGuard:7.0.12+829a4a4'
     // implementation 'Vulcan:Vulcan:2.7.5'
     
     // Local plugins
     // implementation 'VoidGen:VoidGen:2.2.1'
-    implementation 'Plugin:Parkour:7.2.3'
+    implementation 'Plugin:Parkour:7.2.5'
     implementation 'Plugin:ParkourTopTen:4.3'
 
     //PlaceholderAPI Expansions
-    implementation 'PAPI-Expansion:Expansion-Bungee:2.2'
+    implementation 'PAPI-Expansion:Expansion-Bungee:2.3'
     implementation 'PAPI-Expansion:Expansion-Essentials:1.5.2'
-    implementation 'PAPI-Expansion:Expansion-Javascript:2.1.2'
+    implementation 'PAPI-Expansion:Expansion-Javascript:2.1.3'
     implementation 'PAPI-Expansion:Expansion-LuckPerms:5.4'
     implementation 'PAPI-Expansion:Expansion-Math:2.0.2'
     implementation 'PAPI-Expansion:Expansion-Pinger:1.0.1'
     implementation 'PAPI-Expansion:Expansion-Player:2.0.8'
-    implementation 'PAPI-Expansion:Expansion-Server:2.6.2'
+    implementation 'PAPI-Expansion:Expansion-Server:2.7.3'
     implementation 'PAPI-Expansion:Expansion-Vault:1.8.3'
     implementation 'PAPI-Expansion:Expansion-VotingPlugin:1.5'
-    implementation 'PAPI-Expansion:Expansion-Math:2.0.2'
     
     // implementation 'Plugin:UnifiedMetrics:0.3.8'
 }
