Updating and enabling ViaVersion

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -19,7 +19,7 @@ dependencies {
     implementation 'Plugin:Plan:5.6-build-2965'
     implementation 'Plugin:TAB:5.2.0'
     implementation 'Plugin:Vault:1.7.3-b131'
-    // implementation 'Plugin:ViaVersion:5.1.1'
+    implementation 'Plugin:ViaVersion:5.3.2'
     implementation 'Plugin:VotingPlugin:6.18.4'
     implementation 'Plugin:WorldGuard:7.0.12+829a4a4'
     // implementation 'Vulcan:Vulcan:2.7.5'
