--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,27 +1,27 @@
 dependencies {
     // Network plugins
-    implementation 'Server:Paper:1.21.1-133'
+    implementation 'Server:Paper:1.21.8-11'
     implementation 'Plugin:Tebex:2.2.1'
-    implementation 'Plugin:ChatControl:11.3.1'
+    implementation 'Plugin:ChatControl:11.4.5'
     implementation 'Plugin:CommandPanels:3.22.1'
-    implementation 'Plugin:DecentHolograms:2.8.16'
+    implementation 'Plugin:DecentHolograms:2.9.6'
     implementation 'Plugin:Essentials:2.21.0'
     implementation 'Plugin:EssentialsSpawn:2.21.0'
-    implementation 'Plugin:FastAsyncWorldEdit:2.13.1-SNAPSHOT-1089-d1865b6'
-    implementation 'Plugin:GadgetsMenu:5.21.0'
+    implementation 'Plugin:FastAsyncWorldEdit:2.13.1-SNAPSHOT-1137-5ecc34e'
+    implementation 'Plugin:GadgetsMenu:5.22.2'
     implementation 'Plugin:HexNicks:3.1.2'
     implementation 'Plugin:GSit:2.3.1'
     implementation 'Plugin:LibsDisguises:11.0.5'
     implementation 'Plugin:LuckPerms:5.4.158'
     implementation 'Plugin:Multiverse-Core:4.3.16'
     implementation 'Plugin:PlaceholderAPI:2.11.6'
-    implementation 'Plugin:ProtocolLib:5.3.0'
+    implementation 'Plugin:ProtocolLib:5.4.0-SNAPSHOT-754'
     implementation 'Plugin:Plan:5.6-build-2965'
     implementation 'Plugin:TAB:5.2.0'
     implementation 'Plugin:Vault:1.7.3-b131'
     implementation 'Plugin:ViaVersion:5.3.2'
-    implementation 'Plugin:VotingPlugin:6.18.4'
-    implementation 'Plugin:WorldGuard:7.0.12+829a4a4'
+    implementation 'Plugin:VotingPlugin:6.18.7'
+    implementation 'Plugin:WorldGuard:7.0.14-SNAPSHOT+2336-98b5220'
     // implementation 'Vulcan:Vulcan:2.7.5'
     
     // Local plugins
