--- a/plugins/CommandPanels/panels/parkour_ranked.yml
+++ b/plugins/CommandPanels/panels/parkour_ranked.yml
@@ -1,17 +1,17 @@
 panels:
   parkour_ranked:
     perm: default
-    rows: 6
+    rows: 3
     title: '&8Ranked Parkour'
     empty: air
     item:
-        '45':
+        '18':
           material: RED_WOOL
           stack: 1
           name: '&cGo Back'
           commands:
           - open= parkour_menu
-        '49':
+        '22':
           material: YELLOW_WOOL
           stack: 1
           name: '&cKeybindings'
@@ -19,196 +19,33 @@ panels:
           - 'Left click to join'
           - 'Right click to view stats'
           - 'Middle click to view leaderboard'
-          
         '0':
           material: BOOK
           stack: 1
-          name: '&f&b%parkour_course_displayname_easy%&f | Online: &b%parkour_course_players_easy%'
-          lore:
-          - '&eBest time: &f%parkour_course_record_easy_player%&8: &b%parkour_course_record_easy_time%'
-          - '&eViews: &b%parkour_course_views_easy%&f | &eCompletions: &b%parkour_course_completions_easy% &f(&b%math_0:1_100/{parkour_course_views_easy}*{parkour_course_completions_easy}%%&f)'
-          - ''
-          - '&eJoin-fee: &b$%parkour_course_joinfee_easy%&f + &emin-lvl: &b%parkour_course_minparkourlevel_easy%'
-          - '&eReward: &b$%parkour_course_ecoreward_easy%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_easy%'
-          - ''
-          - '&eCreated by: &f%parkour_course_creator_easy%'
+          name: '&eCategory: &fStandard'
           commands:
-          - left= parkour join easy
-          - right= parkour stats easy
-          - middle= parkour leaderboard easy
-        '2':
+          - open= parkour_cat_standard
+          lore:
+          - '&7Classic parkour courses' 
+        '1':
           material: BOOK
           stack: 1
-          name: '&f&b%parkour_course_displayname_rainbowrun%&f | Online: &b%parkour_course_players_rainbowrun%'
-          lore:
-          - '&eBest time: &f%parkour_course_record_rainbowrun_player%&8: &b%parkour_course_record_rainbowrun_time%'
-          - '&eViews: &b%parkour_course_views_rainbowrun%&f | &eCompletions: &b%parkour_course_completions_rainbowrun% &f(&b%math_0:1_100/{parkour_course_views_rainbowrun}*{parkour_course_completions_rainbowrun}%%&f)'
-          - ''
-          - '&eJoin-fee: &b$%parkour_course_joinfee_rainbowrun%&f + &emin-lvl: &b%parkour_course_minparkourlevel_rainbowrun%'
-          - '&eReward: &b$%parkour_course_ecoreward_rainbowrun%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_rainbowrun%'
-          - ''
-          - '&eCreated by: &f%parkour_course_creator_rainbowrun%'
+          name: '&eCategory: &fPride'
           commands:
-          - left= parkour join rainbowrun
-          - right= parkour stats rainbowrun
-          - middle= parkour leaderboard rainbowrun
-        '4':
+          - open= parkour_cat_pride
+          lore:
+          - '&7Pride themed courses' 
+        '8':
           material: BOOK
           stack: 1
-          name: '&f&b%parkour_course_displayname_treeoflife%&f | Online: &b%parkour_course_players_treeoflife%'
-          lore:
-          - '&eBest time: &f%parkour_course_record_treeoflife_player%&8: &b%parkour_course_record_treeoflife_time%'
-          - '&eViews: &b%parkour_course_views_treeoflife%&f | &eCompletions: &b%parkour_course_completions_treeoflife% &f(&b%math_0:1_100/{parkour_course_views_treeoflife}*{parkour_course_completions_treeoflife}%%&f)'
-          - ''
-          - '&eJoin-fee: &b$%parkour_course_joinfee_treeoflife%&f + &emin-lvl: &b%parkour_course_minparkourlevel_treeoflife%'
-          - '&eReward: &b$%parkour_course_ecoreward_treeoflife%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_treeoflife%'
-          - ''
-          - '&eCreated by: &f%parkour_course_creator_treeoflife%'
+          name: '&eCategory: &fDownloaded'
           commands:
-          - left= parkour join treeoflife
-          - right= parkour stats treeoflife
-          - middle= parkour leaderboard treeoflife
-        '9':
-          material: BOOK
-          stack: 1
-          name: '&f&b%parkour_course_displayname_medium%&f | Online: &b%parkour_course_players_medium%'
+          - open= parkour_cat_downloaded
           lore:
-          - '&eBest time: &f%parkour_course_record_medium_player%&8: &b%parkour_course_record_medium_time%'
-          - '&eViews: &b%parkour_course_views_medium%&f | &eCompletions: &b%parkour_course_completions_medium% &f(&b%math_0:1_100/{parkour_course_views_medium}*{parkour_course_completions_medium}%%&f)'
-          - ''
-          - '&eJoin-fee: &b$%parkour_course_joinfee_medium%&f + &emin-lvl: &b%parkour_course_minparkourlevel_medium%'
-          - '&eReward: &b$%parkour_course_ecoreward_medium%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_medium%'
-          - ''
-          - '&eCreated by: &f%parkour_course_creator_medium%'
-          commands:
-          - left= parkour join medium
-          - right= parkour stats medium
-          - middle= parkour leaderboard medium
-        '11':
-          material: BOOK
-          stack: 1
-          name: '&f&b%parkour_course_displayname_rainbowclimb%&f | Online: &b%parkour_course_players_rainbowclimb%'
-          lore:
-          - '&eBest time: &f%parkour_course_record_rainbowclimb_player%&8: &b%parkour_course_record_rainbowclimb_time%'
-          - '&eViews: &b%parkour_course_views_rainbowclimb%&f | &eCompletions: &b%parkour_course_completions_rainbowclimb% &f(&b%math_0:1_100/{parkour_course_views_rainbowclimb}*{parkour_course_completions_rainbowclimb}%%&f)'
-          - ''
-          - '&eJoin-fee: &b$%parkour_course_joinfee_rainbowclimb%&f + &emin-lvl: &b%parkour_course_minparkourlevel_rainbowclimb%'
-          - '&eReward: &b$%parkour_course_ecoreward_rainbowclimb%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_rainbowclimb%'
-          - ''
-          - '&eCreated by: &f%parkour_course_creator_rainbowclimb%'
-          commands:
-          - left= parkour join rainbowclimb
-          - right= parkour stats rainbowclimb
-          - middle= parkour leaderboard rainbowclimb
-        '13':
-          material: BOOK
-          stack: 1
-          name: '&f&b%parkour_course_displayname_skywars%&f | Online: &b%parkour_course_players_skywars%'
-          lore:
-          - '&eBest time: &f%parkour_course_record_skywars_player%&8: &b%parkour_course_record_skywars_time%'
-          - '&eViews: &b%parkour_course_views_skywars%&f | &eCompletions: &b%parkour_course_completions_skywars% &f(&b%math_0:1_100/{parkour_course_views_skywars}*{parkour_course_completions_skywars}%%&f)'
-          - ''
-          - '&eJoin-fee: &b$%parkour_course_joinfee_skywars%&f + &emin-lvl: &b%parkour_course_minparkourlevel_skywars%'
-          - '&eReward: &b$%parkour_course_ecoreward_skywars%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_skywars%'
-          - ''
-          - '&eCreated by: &f%parkour_course_creator_skywars%'
-          commands:
-          - left= parkour join skywars
-          - right= parkour stats skywars
-          - middle= parkour leaderboard skywars
-        '18':
-          material: BOOK
-          stack: 1
-          name: '&f&b%parkour_course_displayname_hard%&f | Online: &b%parkour_course_players_hard%'
-          lore:
-          - '&eBest time: &f%parkour_course_record_hard_player%&8: &b%parkour_course_record_hard_time%'
-          - '&eViews: &b%parkour_course_views_hard%&f | &eCompletions: &b%parkour_course_completions_hard% &f(&b%math_0:1_100/{parkour_course_views_hard}*{parkour_course_completions_hard}%%&f)'
-          - ''
-          - '&eJoin-fee: &b$%parkour_course_joinfee_hard%&f + &emin-lvl: &b%parkour_course_minparkourlevel_hard%'
-          - '&eReward: &b$%parkour_course_ecoreward_hard%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_hard%'
-          - ''
-          - '&eCreated by: &f%parkour_course_creator_hard%'
-          commands:
-          - left= parkour join hard
-          - right= parkour stats hard
-          - middle= parkour leaderboard hard
-        '20':
-          material: BOOK
-          stack: 1
-          name: '&f&b%parkour_course_displayname_rainbowfall%&f | Online: &b%parkour_course_players_rainbowfall%'
-          lore:
-          - '&eBest time: &f%parkour_course_record_rainbowfall_player%&8: &b%parkour_course_record_rainbowfall_time%'
-          - '&eViews: &b%parkour_course_views_rainbowfall%&f | &eCompletions: &b%parkour_course_completions_rainbowfall% &f(&b%math_0:1_100/{parkour_course_views_rainbowfall}*{parkour_course_completions_rainbowfall}%%&f)'
-          - ''
-          - '&eJoin-fee: &b$%parkour_course_joinfee_rainbowfall%&f + &emin-lvl: &b%parkour_course_minparkourlevel_rainbowfall%'
-          - '&eReward: &b$%parkour_course_ecoreward_rainbowfall%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_rainbowfall%'
-          - ''
-          - '&eCreated by: &f%parkour_course_creator_rainbowfall%'
-          commands:
-          - left= parkour join rainbowfall
-          - right= parkour stats rainbowfall
-          - middle= parkour leaderboard rainbowfall
-        '22':
-          material: BOOK
-          stack: 1
-          name: '&f&b%parkour_course_displayname_flyingvillage%&f | Online: &b%parkour_course_players_flyingvillage%'
-          lore:
-          - '&eBest time: &f%parkour_course_record_flyingvillage_player%&8: &b%parkour_course_record_flyingvillage_time%'
-          - '&eViews: &b%parkour_course_views_flyingvillage%&f | &eCompletions: &b%parkour_course_completions_flyingvillage% &f(&b%math_0:1_100/{parkour_course_views_flyingvillage}*{parkour_course_completions_flyingvillage}%%&f)'
-          - ''
-          - '&eJoin-fee: &b$%parkour_course_joinfee_flyingvillage%&f + &emin-lvl: &b%parkour_course_minparkourlevel_flyingvillage%'
-          - '&eReward: &b$%parkour_course_ecoreward_flyingvillage%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_flyingvillage%'
-          - ''
-          - '&eCreated by: &f%parkour_course_creator_flyingvillage%'
-          commands:
-          - left= parkour join flyingvillage
-          - right= parkour stats flyingvillage
-          - middle= parkour leaderboard flyingvillage
-        '27':
-          material: BOOK
-          stack: 1
-          name: '&f&b%parkour_course_displayname_expert%&f | Online: &b%parkour_course_players_expert%'
-          lore:
-          - '&eBest time: &f%parkour_course_record_expert_player%&8: &b%parkour_course_record_expert_time%'
-          - '&eViews: &b%parkour_course_views_expert%&f | &eCompletions: &b%parkour_course_completions_expert% &f(&b%math_0:1_100/{parkour_course_views_expert}*{parkour_course_completions_expert}%%&f)'
-          - ''
-          - '&eJoin-fee: &b$%parkour_course_joinfee_expert%&f + &emin-lvl: &b%parkour_course_minparkourlevel_expert%'
-          - '&eReward: &b$%parkour_course_ecoreward_expert%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_expert%'
-          - ''
-          - '&eCreated by: &f%parkour_course_creator_expert%'
-          commands:
-          - left= parkour join expert
-          - right= parkour stats expert
-          - middle= parkour leaderboard expert
-        '29':
-          material: BOOK
-          stack: 1
-          name: '&f&b%parkour_course_displayname_pridesnake%&f | Online: &b%parkour_course_players_pridesnake%'
-          lore:
-          - '&eBest time: &f%parkour_course_record_pridesnake_player%&8: &b%parkour_course_record_pridesnake_time%'
-          - '&eViews: &b%parkour_course_views_pridesnake%&f | &eCompletions: &b%parkour_course_completions_pridesnake% &f(&b%math_0:1_100/{parkour_course_views_pridesnake}*{parkour_course_completions_pridesnake}%%&f)'
-          - ''
-          - '&eJoin-fee: &b$%parkour_course_joinfee_pridesnake%&f + &emin-lvl: &b%parkour_course_minparkourlevel_pridesnake%'
-          - '&eReward: &b$%parkour_course_ecoreward_pridesnake%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_pridesnake%'
-          - ''
-          - '&eCreated by: &f%parkour_course_creator_pridesnake%'
-          commands:
-          - left= parkour join pridesnake
-          - right= parkour stats pridesnake
-          - middle= parkour leaderboard pridesnake
-        '38':
-          material: BOOK
-          stack: 1
-          name: '&f&b%parkour_course_displayname_transsnake%&f | Online: &b%parkour_course_players_transsnake%'
-          lore:
-          - '&eBest time: &f%parkour_course_record_transsnake_player%&8: &b%parkour_course_record_transsnake_time%'
-          - '&eViews: &b%parkour_course_views_transsnake%&f | &eCompletions: &b%parkour_course_completions_transsnake% &f(&b%math_0:1_100/{parkour_course_views_transsnake}*{parkour_course_completions_transsnake}%%&f)'
-          - ''
-          - '&eJoin-fee: &b$%parkour_course_joinfee_transsnake%&f + &emin-lvl: &b%parkour_course_minparkourlevel_transsnake%'
-          - '&eReward: &b$%parkour_course_ecoreward_transsnake%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_transsnake%'
-          - ''
-          - '&eCreated by: &f%parkour_course_creator_transsnake%'
-          commands:
-          - left= parkour join transsnake
-          - right= parkour stats transsnake
-          - middle= parkour leaderboard transsnake
+          - '&7Downloaded courses we have modified' 
+        
+        
+        
+        
+        
+        
