--- a/plugins/CommandPanels/panels/parkour_casual.yml
+++ b/plugins/CommandPanels/panels/parkour_casual.yml
@@ -29,8 +29,41 @@ panels:
           - ''
           - '&eReward: &b$%parkour_course_ecoreward_momentumjump%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_momentumjump%'
           - ''
+          - '&eDifficulty: &fEasy'
           - '&eCreated by: &f%parkour_course_creator_momentumjump%'
           commands:
           - left= parkour join momentumjump
           - right= parkour stats momentumjump
           - middle= parkour leaderboard momentumjump
+        '1':
+          material: BOOK
+          stack: 1
+          name: '&f&b%parkour_course_displayname_spiral%&f | Online: &b%parkour_course_players_spiral%'
+          lore:
+          - '&eBest time: &f%parkour_course_record_spiral_player%&8: &b%parkour_course_record_spiral_time%'
+          - '&eViews: &b%parkour_course_views_spiral%&f | &eCompletions: &b%parkour_course_completions_spiral% &f(&b%math_0:1_100/{parkour_course_views_spiral}*{parkour_course_completions_spiral}%%&f)'
+          - ''
+          - '&eReward: &b$%parkour_course_ecoreward_spiral%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_spiral%'
+          - ''
+          - '&eDifficulty: &fEasy'
+          - '&eCreated by: &f%parkour_course_creator_spiral%'
+          commands:
+          - left= parkour join spiral
+          - right= parkour stats spiral
+          - middle= parkour leaderboard spiral
+        '2':
+          material: BOOK
+          stack: 1
+          name: '&f&b%parkour_course_displayname_agonymarathon%&f | Online: &b%parkour_course_players_agonymarathon%'
+          lore:
+          - '&eBest time: &f%parkour_course_record_agonymarathon_player%&8: &b%parkour_course_record_agonymarathon_time%'
+          - '&eViews: &b%parkour_course_views_agonymarathon%&f | &eCompletions: &b%parkour_course_completions_agonymarathon% &f(&b%math_0:1_100/{parkour_course_views_agonymarathon}*{parkour_course_completions_agonymarathon}%%&f)'
+          - ''
+          - '&eReward: &b$%parkour_course_ecoreward_agonymarathon%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_agonymarathon%'
+          - ''
+          - '&eDifficulty: &fMedium-Hard'
+          - '&eCreated by: &f%parkour_course_creator_agonymarathon%'
+          commands:
+          - left= parkour join agonymarathon
+          - right= parkour stats agonymarathon
+          - middle= parkour leaderboard agonymarathon
