--- a/plugins/CommandPanels/panels/parkour_playercourses.yml
+++ b/plugins/CommandPanels/panels/parkour_playercourses.yml
@@ -51,3 +51,18 @@ panels:
           - left= parkour join shipwool
           - right= parkour stats shipwool
           - middle= parkour leaderboard shipwool
+        '2':
+          material: cps= Riztem05
+          stack: 1
+          name: '&f&b%parkour_course_displayname_aquarium%&f | Online: &b%parkour_course_players_aquarium%'
+          lore:
+          - '&eBest time: &f%parkour_course_record_aquarium_player%&8: &b%parkour_course_record_aquarium_time%'
+          - '&eViews: &b%parkour_course_views_aquarium%&f | &eCompletions: &b%parkour_course_completions_aquarium% &f(&b%math_0:1_100/{parkour_course_views_aquarium}*{parkour_course_completions_aquarium}%%&f)'
+          - ''
+          - '&eReward: &b$%parkour_course_ecoreward_aquarium%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_aquarium%'
+          - ''
+          - '&eCreated by: &f%parkour_course_creator_aquarium%'
+          commands:
+          - left= parkour join aquarium
+          - right= parkour stats aquarium
+          - middle= parkour leaderboard aquarium
