--- a/plugins/CommandPanels/panels/parkour_playercourses.yml
+++ b/plugins/CommandPanels/panels/parkour_playercourses.yml
@@ -66,3 +66,18 @@ panels:
           - left= parkour join aquarium
           - right= parkour stats aquarium
           - middle= parkour leaderboard aquarium
+        '3':
+          material: cps= Honeybees0
+          stack: 1
+          name: '&f&b%parkour_course_displayname_bisnake%&f | Online: &b%parkour_course_players_bisnake%'
+          lore:
+          - '&eBest time: &f%parkour_course_record_bisnake_player%&8: &b%parkour_course_record_bisnake_time%'
+          - '&eViews: &b%parkour_course_views_bisnake%&f | &eCompletions: &b%parkour_course_completions_bisnake% &f(&b%math_0:1_100/{parkour_course_views_bisnake}*{parkour_course_completions_bisnake}%%&f)'
+          - ''
+          - '&eReward: &b$%parkour_course_ecoreward_bisnake%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_bisnake%'
+          - ''
+          - '&eCreated by: &f%parkour_course_creator_bisnake%'
+          commands:
+          - left= parkour join bisnake
+          - right= parkour stats bisnake
+          - middle= parkour leaderboard bisnake
