--- a/plugins/Essentials/config.yml
+++ b/plugins/Essentials/config.yml
@@ -385,7 +385,7 @@ backup:
   #command: 'rdiff-backup World1 backups/World1'
 
 # Set this true to enable permission per warp.
-per-warp-permission: true
+per-warp-permission: false
 
 # Sort output of /list command by groups.
 # You can hide and merge the groups displayed in /list by defining the desired behaviour here.
