--- a/plugins/CommandPanels/panels/parkour_casual.yml
+++ b/plugins/CommandPanels/panels/parkour_casual.yml
@@ -1,17 +1,17 @@
 panels:
   parkour_casual:
     perm: default
-    rows: 5
+    rows: 3
     title: '&8Casual Parkour'
     empty: air
     item:
-        '36':
+        '18':
           material: RED_WOOL
           stack: 1
           name: '&cGo Back'
           commands:
           - open= parkour_menu
-        '40':
+        '22':
           material: YELLOW_WOOL
           stack: 1
           name: '&cKeybindings'
@@ -61,7 +61,7 @@ panels:
           - ''
           - '&eReward: &b$%parkour_course_ecoreward_agonymarathon%&f + &elvl-up: &b%parkour_course_rewardparkourleveladd_agonymarathon%'
           - ''
-          - '&eDifficulty: &fMedium-Hard'
+          - '&eDifficulty: &fHard'
           - '&eCreated by: &f%parkour_course_creator_agonymarathon%'
           commands:
           - left= parkour join agonymarathon
